[vmstore] fixed inconsistencies

--- a/modules-available/vmstore/lang/en/module.json
+++ b/modules-available/vmstore/lang/en/module.json
@@ -1,4 +1,4 @@
 {
-    "module_name": "VM storage location",
-    "page_title": "Setting VM storage location"
+    "module_name": "VM Storage Location",
+    "page_title": "Setting VM Storage Location"
 }
