--- a/modules-available/serversetup-bwlp/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/en/template-tags.json
@@ -8,12 +8,12 @@
     "lang_bootMenuCreate": "Create Boot Menu",
     "lang_chooseIP": "Please select the IP address that the client server will use to boot.",
     "lang_customEntry": "Custom entry",
-    "lang_downloadImage": "Download USB image",
+    "lang_downloadImage": "Download USB Image",
     "lang_downloadRufus": "Download Rufus",
     "lang_example": "Example",
     "lang_generationFailed": "Could not generate boot menu. The bwLehrpool-System might not work properly. If you can't fix the problem, please report the error message above to the bwLehrpool project.",
     "lang_localHDD": "Local HDD",
-    "lang_masterPassword": "Master password",
+    "lang_masterPassword": "Master Password",
     "lang_masterPasswordHelp": "The master password is required to edit a boot menu entry. This should be set for security reasons.",
     "lang_menuCustom": "Custom Extra Menu",
     "lang_menuCustomHint1": "Here you have the opportunity to add your own menu code to the displayed PXE menu, eg to refer to other PXE server. The format corresponds to the syslinux menu format.",
@@ -21,6 +21,7 @@
     "lang_menuCustomHint3": "and select as the default boot behavior custom as well.",
     "lang_menuDisplayTime": "Menu Display Time",
     "lang_menuGeneration": "Generating boot menu...",
+    "lang_moduleHeading": "iPXE / Boot Menu",
     "lang_seconds": "Seconds",
     "lang_set": "Set",
     "lang_usbImage": "USB image",
