[systemstatus] fixed inconsistencies

--- a/modules-available/systemstatus/lang/de/template-tags.json
+++ b/modules-available/systemstatus/lang/de/template-tags.json
@@ -1,5 +1,6 @@
 {
     "lang_addressConfiguration": "Adresskonfiguration",
+    "lang_areYouSureNoUndo": "Sind Sie sicher? Diese Aktion kann nicht r\u00fcckg\u00e4ngig gemacht werden.",
     "lang_attention": "Achtung!",
     "lang_average": "Durchschnitt",
     "lang_capacity": "Kapazit\u00e4t",
@@ -12,11 +13,13 @@
     "lang_iAmSure": "Ja, ich bin sicher",
     "lang_logicCPUs": "Logische CPUs",
     "lang_maintenance": "Maintenance",
+    "lang_moduleHeading": "System-Status",
     "lang_notDetermined": "Konnte nicht ermittelt werden",
     "lang_occupied": "Belegt",
     "lang_onlyOS": "Nur OS",
     "lang_overview": "\u00dcbersicht",
     "lang_ramUsage": "RAM-Nutzung",
+    "lang_serverReboot": "Server neustarten",
     "lang_services": "Dienste",
     "lang_space": "Speicherplatz",
     "lang_storeMissingExpected": "VM-Store nicht eingebunden. Erwartet:",
