--- a/modules-available/systemstatus/lang/en/template-tags.json
+++ b/modules-available/systemstatus/lang/en/template-tags.json
@@ -1,5 +1,6 @@
 {
     "lang_addressConfiguration": "Address Configuration",
+    "lang_areYouSureNoUndo": "Are you sure? This cannot be undone!",
     "lang_attention": "Attention!",
     "lang_average": "Average",
     "lang_capacity": "Capacity",
@@ -12,11 +13,13 @@
     "lang_iAmSure": "Yes, I am sure",
     "lang_logicCPUs": "Logic CPUs",
     "lang_maintenance": "Maintenance",
+    "lang_moduleHeading": "System Status",
     "lang_notDetermined": "Could not be determined",
     "lang_occupied": "Occupied",
     "lang_onlyOS": "OS Only",
     "lang_overview": "Overview",
     "lang_ramUsage": "RAM Usage",
+    "lang_serverReboot": "Reboot Server",
     "lang_services": "Services",
     "lang_space": "Space",
     "lang_storeMissingExpected": "VM store not mounted. Expected:",
