[statistics] fixed inconsistencies

--- a/modules-available/statistics/lang/en/template-tags.json
+++ b/modules-available/statistics/lang/en/template-tags.json
@@ -45,6 +45,7 @@
     "lang_modelName": "Model name",
     "lang_modelNo": "Model",
     "lang_modelStats": "PC models",
+    "lang_moduleHeading": "Client Statistics",
     "lang_more": "More",
     "lang_newMachines": "New machines",
     "lang_noEdid": "No EDID",
@@ -66,14 +67,14 @@
     "lang_reallocatedSectors": "Bad sectors",
     "lang_screens": "Screens",
     "lang_serialNo": "Serial no",
-    "lang_showList": "Show list",
-    "lang_showVisualization": "Show visualization",
+    "lang_showList": "List",
+    "lang_showVisualization": "Visualization",
     "lang_sockets": "Sockets",
     "lang_tempPart": "Temp. partition",
     "lang_tempPartStats": "Temporary partition",
     "lang_thoseAreProjectors": "These model names will always be treated as beamers, even if the device's EDID data says otherwise.",
     "lang_timebarDesc": "Visual representation of the last few days. Red parts mark periods where the client was occupied, green parts where the client was idle. Dimmed parts mark nights (10pm to 8am).",
-    "lang_tmpGb": "HDD temp",
+    "lang_tmpGb": "Temp HDD",
     "lang_total": "Total",
     "lang_usageDetails": "Detailed usage",
     "lang_usageState": "State",
