--- a/modules-available/statistics/lang/de/template-tags.json
+++ b/modules-available/statistics/lang/de/template-tags.json
@@ -45,6 +45,7 @@
     "lang_modelName": "Modellname",
     "lang_modelNo": "Modell",
     "lang_modelStats": "PC-Modelle",
+    "lang_moduleHeading": "Client-Statistiken",
     "lang_more": "Mehr",
     "lang_newMachines": "Neue Ger\u00e4te",
     "lang_noEdid": "Kein EDID",
@@ -73,7 +74,7 @@
     "lang_tempPartStats": "Tempor\u00e4re Partition",
     "lang_thoseAreProjectors": "Diese Modellnamen werden als Beamer behandelt, auch wenn die EDID-Informationen des Ger\u00e4tes anderes berichten.",
     "lang_timebarDesc": "Visuelle Darstellung der letzten Tage. Rote Abschnitte zeigen, wann der Rechner belegt war, gr\u00fcne, wann er nicht verwendet wurde, aber eingeschaltet war. Die leicht abgedunkelten Abschnitte markieren N\u00e4chte (22 bis 8 Uhr).",
-    "lang_tmpGb": "HDD-Temp",
+    "lang_tmpGb": "Temp-HDD",
     "lang_total": "Gesamt",
     "lang_usageDetails": "Nutzungsdetails",
     "lang_usageState": "Zustand",
