--- a/modules-available/permissionmanager/lang/de/template-tags.json
+++ b/modules-available/permissionmanager/lang/de/template-tags.json
@@ -19,5 +19,7 @@
     "lang_selected": "ausgewählte",
     "lang_Permissions": "Rechte",
     "lang_selectizePlaceholder": "Nach Rollen filtern...",
-    "lang_searchPlaceholder": "Nach Rollen suchen..."
+    "lang_searchPlaceholder": "Nach Rollen suchen...",
+    "lang_moduleName": "Rechtemanager",
+    "lang_roleEditor": "Rollen Editor"
 }
