--- a/modules-available/rebootcontrol/lang/de/template-tags.json
+++ b/modules-available/rebootcontrol/lang/de/template-tags.json
@@ -15,6 +15,7 @@
     "lang_rebootAt": "Neustart um:",
     "lang_rebootButton": "Neustarten",
     "lang_rebootCheck": "Wollen Sie die ausgew\u00e4hlten Rechner wirklich neustarten?",
+    "lang_rebootControl": "Reboot Control",
     "lang_rebooting": "Neustart...",
     "lang_selectall": "Alle ausw\u00e4hlen",
     "lang_selected": "Ausgew\u00e4hlt",
