--- a/modules-available/rebootcontrol/lang/en/template-tags.json
+++ b/modules-available/rebootcontrol/lang/en/template-tags.json
@@ -15,6 +15,7 @@
     "lang_rebootAt": "Reboot at:",
     "lang_rebootButton": "Reboot",
     "lang_rebootCheck": "Do you really want to reboot the selected clients?",
+    "lang_rebootControl": "Reboot Control",
     "lang_rebooting": "Rebooting...",
     "lang_selectall": "Select all",
     "lang_selected": "Selected",
