--- a/modules-available/baseconfig/lang/de/template-tags.json
+++ b/modules-available/baseconfig/lang/de/template-tags.json
@@ -2,6 +2,7 @@
     "lang_basicConfiguration": "Basiskonfiguration",
     "lang_clientRelatedConfig": "Die Optionen auf dieser Seite beziehen sich auf das Verhalten der bwLehrpool-Clients.",
     "lang_defaultValue": "Standard",
+    "lang_discardChanges": "Änderungen verwerfen",
     "lang_editOverrideNotice": "Sie bearbeiten die Einstellungen f\u00fcr einen Unterbereich",
     "lang_enableOverride": "\u00dcberschreiben",
     "lang_inheritSource": "Geerbt von",
