--- a/modules-available/statistics_reporting/lang/de/template-tags.json
+++ b/modules-available/statistics_reporting/lang/de/template-tags.json
@@ -10,6 +10,7 @@
     "lang_location": "Ort",
     "lang_longSessions": "Sitzungen \u2265 60s",
     "lang_medianSessionLength": "Sitzungsdauer Median",
+    "lang_moduleName": "Statistikauswertung",
     "lang_reportMoreInfo": "Weitere Informationen...",
     "lang_reportingDescription": "Helfen Sie uns bwLehrpool durch das w\u00f6chentliche Verschicken eines anonymisierten Statistikberichts zu verbessern. Wenn Sie den Inhalt eines solchen Reports genauer inspizieren wollen, k\u00f6nnen Sie \u00fcber den untenstehenden Button einen aktuellen Report Ihres Servers herunterladen.",
     "lang_reportingLabel": "Anonymisierte Nutzungsstatistiken \u00fcbermitteln",
