[dnbd3] Show free space, fix styling, add help texts and strings (de)

--- a/modules-available/dnbd3/lang/de/messages.json
+++ b/modules-available/dnbd3/lang/de/messages.json
@@ -1,3 +1,8 @@
 {
+    "invalid-ipv4": "{{0}} ist keine g\u00fcltige IPv4-Adresse",
+    "server-added": "Server {{0}} hinzugef\u00fcgt",
+    "server-already-exists": "Server {{0}} existiert bereits",
+    "server-deleted": "Server {{0}} gel\u00f6scht",
+    "server-non-existent": "Server {{0}} existiert nicht",
     "server-unreachable": "Server nicht erreichbar"
 }
