--- a/modules-available/dnbd3/lang/de/template-tags.json
+++ b/modules-available/dnbd3/lang/de/template-tags.json
@@ -1,8 +1,40 @@
 {
+    "lang_addServer": "Server hinzuf\u00fcgen",
+    "lang_allowedSubnets": "Zum Zugriff freigegebene Subnets",
+    "lang_bytesSent": "Gesendet",
+    "lang_changeDnbd3Status": "DNBD3 ein-\/ausschalten",
+    "lang_client": "Client",
     "lang_clientCount": "Clients",
+    "lang_clientList": "Liste der Clients",
+    "lang_clientsByLocation": "Clients nach Raum\/Ort",
+    "lang_count": "Anzahl",
+    "lang_disabled": "Deaktiviert",
+    "lang_diskFree": "Freier Speicher",
+    "lang_dnbd3IntroText": "DNBD3 ist ganz toll. Einfach einschalten und los gehts, zu beachten gibt es rein gar nichts!",
+    "lang_dnbd3Management": "DNBD3 Verwaltung",
+    "lang_dnbd3Status": "DNBD3 Status",
+    "lang_enableDnbd3": "DNBD3 aktivieren",
+    "lang_enabled": "Aktiviert",
+    "lang_enterIpOfServer": "Bitte geben Sie die IP-Adresse des hinzuzuf\u00fcgenden Servers ein",
+    "lang_externalServer": "Externer DNBD3-Server",
+    "lang_externalServerAdd": "Externen Server hinzuf\u00fcgen",
+    "lang_externalServerHelp": "Ein externer Server wird nicht \u00fcber den Satellitenserver konfiguriert und verwaltet. Das Installieren, Einrichten und ggf. Aktualisieren der DNBD3-Serversoftware muss manuell durchgef\u00fchrt werden.\r\nDies bietet mehr Flexibilit\u00e4t bei der Konfiguration und Anpassung, z.B. bei der Verwendung von RAID- oder bcache-Setups, oder wenn der DNBD3-Server auf einer Maschine laufen soll, die noch andere Services bereitstellt.\r\nWeitere Informationen dazu finden Sie im Wiki.",
+    "lang_global": "Global",
     "lang_lastSeen": "Letzte Aktivit\u00e4t",
+    "lang_location": "Ort",
+    "lang_locations": "Orte",
+    "lang_manageAccessTo": "Zugriff auf Server festlegen:",
+    "lang_managedServer": "Automatisch konfigurierter DNBD3-Proxy",
+    "lang_managedServerAdd": "Automatisch konfigurierten Proxy hinzuf\u00fcgen",
+    "lang_managedServerHelp": "Automatisch konfigurierte DNBD3-Proxies booten wie gew\u00f6hnliche bwLehrpool-Clients via PXE \u00fcber den Satelliten-Server. Sobald ein bwLehrpool-Client als DNBD3-Proxy konfiguriert wird, erh\u00e4lt er beim Booten eine gesonderte Konfiguration, sodass er fortan exklusiv als DNBD3-Proxy arbeitet, und nicht mehr als Arbeitsstation zur Verf\u00fcgung steht.\r\nDer Vorteil ist, dass die Konfiguration automatisiert erfolgt, und durch w\u00f6chentliche Reboots sichergestellt wird, dass eventuelle Updates des MiniLinux angewendet werden.\r\nIn diesem Fall legen Sie bitte eine Partition mit der ID 45 auf der Festplatte des Proxy-Servers an; diese wird persistent Behandelt und im Gegensatz zur ID44-Partition nicht beim Booten formatiert. Generell sollte diese Partition so gro\u00df wie m\u00f6glich sein, abh\u00e4ngig von der Anzahl der genutzten VMs. Bei Platzmangel l\u00f6scht der Proxy automatisch die VM, die am l\u00e4ngsten nicht verwendet wurde, um neuen VMs Platz zu machen.\r\nWeitere Informationen dazu finden Sie im Wiki.",
+    "lang_proxyLocationText": "Bla bla bla BLA!!!!",
     "lang_proxyServerTHead": "Server\/Proxy",
+    "lang_recursiveCount": "Rekursiv",
     "lang_rxTotal": "Gesamt empfangen",
+    "lang_serverList": "Serverliste",
+    "lang_storageSize": "Speichergr\u00f6\u00dfe",
+    "lang_test": "Testen",
     "lang_txTotal": "Gesamt gesendet",
-    "lang_uptime": "Aktuelle Laufzeit"
+    "lang_uptime": "Aktuelle Laufzeit",
+    "lang_wantToDelete": "Wollen Sie diesen Server wirklich entfernen? (Rebooten\/Ausschalten muss in diesem Fall manuell vorgenommen werden)"
 }
