[eventlog] changed module name in navigation and site title back to "Server-Log"

--- a/modules-available/eventlog/lang/de/template-tags.json
+++ b/modules-available/eventlog/lang/de/template-tags.json
@@ -1,6 +1,6 @@
 {
     "lang_details": "Details",
     "lang_event": "Ereignis",
-    "lang_eventLog": "Ereignisprotokoll",
+    "lang_eventLog": "Serverprotokoll",
     "lang_when": "Wann"
 }
