--- a/modules-available/eventlog/lang/en/template-tags.json
+++ b/modules-available/eventlog/lang/en/template-tags.json
@@ -1,6 +1,6 @@
 {
     "lang_details": "Details",
     "lang_event": "Event",
-    "lang_eventLog": "Event log",
+    "lang_eventLog": "Server Log",
     "lang_when": "When"
 }
