--- a/modules-available/dnbd3/lang/de/template-tags.json
+++ b/modules-available/dnbd3/lang/de/template-tags.json
@@ -1,6 +1,8 @@
 {
     "lang_addServer": "Server hinzuf\u00fcgen",
     "lang_allowedSubnets": "Zum Zugriff freigegebene Subnets",
+    "lang_backgroundReplication": "Replikation im Hintergrund",
+    "lang_backgroundReplicationInfo": "Sobald eine VM \u00fcber den Proxy angefragt wird, spiegelt der Proxy im Hintergrund den vollst\u00e4ndigen Inhalt des VM-Abbildes, nicht nur die angefragten Bl\u00f6cke.",
     "lang_bytesSent": "Gesendet",
     "lang_changeDnbd3Status": "DNBD3 ein-\/ausschalten",
     "lang_client": "Client",
@@ -13,12 +15,15 @@
     "lang_dnbd3IntroText": "DNBD3 ist ganz toll. Einfach einschalten und los gehts, zu beachten gibt es rein gar nichts!",
     "lang_dnbd3Management": "DNBD3 Verwaltung",
     "lang_dnbd3Status": "DNBD3 Status",
+    "lang_editProxyHeading": "Proxy-Einstellungen bearbeiten",
     "lang_enableDnbd3": "DNBD3 aktivieren",
     "lang_enabled": "Aktiviert",
     "lang_enterIpOfServer": "Bitte geben Sie die IP-Adresse des hinzuzuf\u00fcgenden Servers ein",
     "lang_externalServer": "Externer DNBD3-Server",
     "lang_externalServerAdd": "Externen Server hinzuf\u00fcgen",
     "lang_externalServerHelp": "Ein externer Server wird nicht \u00fcber den Satellitenserver konfiguriert und verwaltet. Das Installieren, Einrichten und ggf. Aktualisieren der DNBD3-Serversoftware muss manuell durchgef\u00fchrt werden.\r\nDies bietet mehr Flexibilit\u00e4t bei der Konfiguration und Anpassung, z.B. bei der Verwendung von RAID- oder bcache-Setups, oder wenn der DNBD3-Server auf einer Maschine laufen soll, die noch andere Services bereitstellt.\r\nWeitere Informationen dazu finden Sie im Wiki.",
+    "lang_firewallInfo": "Wird ein Proxy auf einen oder mehrere R\u00e4ume beschr\u00e4nkt, werden Clients aus anderen R\u00e4umen diesen Proxy nicht verwenden. Technisch ist der Zugriff aus anderen R\u00e4umen jedoch trotzdem noch m\u00f6glich. Mit aktivieren dieser Option wird der Zugriff aus anderen R\u00e4umen per Firewall verhindert.",
+    "lang_firewalled": "Zugriff auf zugewiesene R\u00e4ume beschr\u00e4nken",
     "lang_global": "Global",
     "lang_lastSeen": "Letzte Aktivit\u00e4t",
     "lang_location": "Ort",
