[sysconfig] renamed "Go"-Button to "apply filter" and connected the button to the input field

--- a/modules-available/syslog/lang/en/template-tags.json
+++ b/modules-available/syslog/lang/en/template-tags.json
@@ -6,5 +6,6 @@
     "lang_filter": "Filter",
     "lang_go": "Go",
     "lang_not": "not",
-    "lang_when": "When"
+    "lang_when": "When",
+    "lang_applyFilter": "Apply Filter"
 }
