--- a/modules-available/syslog/lang/de/template-tags.json
+++ b/modules-available/syslog/lang/de/template-tags.json
@@ -6,5 +6,6 @@
     "lang_filter": "Filter",
     "lang_go": "Go",
     "lang_not": "not",
-    "lang_when": "Wann"
+    "lang_when": "Wann",
+    "lang_applyFilter": "Filter anwenden"
 }
