[statistics_reporting] moved export button from header to first panel, renamed "apply" button to "show" button, made panel-headers not being <strong> anymore

--- a/modules-available/statistics_reporting/lang/de/template-tags.json
+++ b/modules-available/statistics_reporting/lang/de/template-tags.json
@@ -16,6 +16,7 @@
     "lang_reportingLabel": "Anonymisierte Nutzungsstatistiken \u00fcbermitteln",
     "lang_sessions": "Sitzungen",
     "lang_shortSessions": "Sitzungen < 60s",
+    "lang_show": "Anzeigen",
     "lang_total": "Gesamt",
     "lang_totalOffTime": "Gesamtzeit offline",
     "lang_totalTime": "Gesamtzeit",
