--- a/modules-available/statistics_reporting/lang/en/template-tags.json
+++ b/modules-available/statistics_reporting/lang/en/template-tags.json
@@ -16,6 +16,7 @@
     "lang_reportingLabel": "Send anonymized usage statistics",
     "lang_sessions": "Sessions",
     "lang_shortSessions": "Sessions < 60s",
+    "lang_show": "Show",
     "lang_total": "Total",
     "lang_totalOffTime": "Total Time Offline",
     "lang_totalTime": "Total Time",
