[exams] replaced confirm dialog with modal; added panels to edit/add exam page; added visual separation to the "add exam period" button;

--- a/modules-available/exams/lang/de/template-tags.json
+++ b/modules-available/exams/lang/de/template-tags.json
@@ -12,6 +12,7 @@
     "lang_begin_date": "Beginn Datum",
     "lang_begin_time": "Uhrzeit",
     "lang_comfirmGlobalExam": "Wollen Sie wirklich eine globale Pr\u00fcfung definieren? Im gew\u00e4hlten Zeitraum werden s\u00e4mtliche R\u00e4ume in den Pr\u00fcfungsmodus geschaltet.",
+    "lang_dateTime": "Datum\/Uhrzeit",
     "lang_deleteConfirmation": "Wirklich l\u00f6schen?",
     "lang_description": "Beschreibung",
     "lang_duration": "Dauer",
