--- a/modules-available/exams/lang/en/template-tags.json
+++ b/modules-available/exams/lang/en/template-tags.json
@@ -12,6 +12,7 @@
     "lang_begin_date": "Begin Date",
     "lang_begin_time": "Time",
     "lang_comfirmGlobalExam": "Do you really want to create a global exam? Every single room will be set to lecture mode during the selected time period.",
+    "lang_dateTime": "Date\/Time",
     "lang_deleteConfirmation": "Are you sure?",
     "lang_description": "Description",
     "lang_duration": "Duration",
