[locations] added warning if subnets are marked for deletion; locations now scroll into view; subnet list now sorted by startip;

--- a/modules-available/locations/lang/en/template-tags.json
+++ b/modules-available/locations/lang/en/template-tags.json
@@ -6,6 +6,7 @@
     "lang_deleteChildLocations": "Delete child locations aswell",
     "lang_deleteLocation": "Delete location",
     "lang_deleteSubnet": "Delete range",
+    "lang_deleteSubnetWarning": "All subnets marked for deletion will be deleted. This cannot be undone!",
     "lang_editConfigVariables": "Config vars",
     "lang_editRoomplan": "Edit roomplan",
     "lang_endAddress": "End address",
