[dnbd3] Extend server details page (altservers, config)

--- a/modules-available/dnbd3/lang/de/template-tags.json
+++ b/modules-available/dnbd3/lang/de/template-tags.json
@@ -1,6 +1,7 @@
 {
     "lang_addServer": "Server hinzuf\u00fcgen",
     "lang_allowedSubnets": "Zum Zugriff freigegebene Subnets",
+    "lang_altservers": "Uplinks",
     "lang_backgroundReplication": "Replikation im Hintergrund",
     "lang_backgroundReplicationInfo": "Sobald eine VM \u00fcber den Proxy angefragt wird, spiegelt der Proxy im Hintergrund den vollst\u00e4ndigen Inhalt des VM-Abbildes, nicht nur die angefragten Bl\u00f6cke.",
     "lang_bytesSent": "Gesendet",
@@ -9,6 +10,7 @@
     "lang_clientCount": "Clients",
     "lang_clientList": "Liste der Clients",
     "lang_clientsByLocation": "Clients nach Raum\/Ort",
+    "lang_comment": "Kommentar",
     "lang_count": "Anzahl",
     "lang_disabled": "Deaktiviert",
     "lang_diskFree": "Freier Speicher",
@@ -24,19 +26,29 @@
     "lang_externalServerHelp": "Ein externer Server wird nicht \u00fcber den Satellitenserver konfiguriert und verwaltet. Das Installieren, Einrichten und ggf. Aktualisieren der DNBD3-Serversoftware muss manuell durchgef\u00fchrt werden.\r\nDies bietet mehr Flexibilit\u00e4t bei der Konfiguration und Anpassung, z.B. bei der Verwendung von RAID- oder bcache-Setups, oder wenn der DNBD3-Server auf einer Maschine laufen soll, die noch andere Services bereitstellt.\r\nWeitere Informationen dazu finden Sie im Wiki.",
     "lang_firewallInfo": "Wird ein Proxy auf einen oder mehrere R\u00e4ume beschr\u00e4nkt, werden Clients aus anderen R\u00e4umen diesen Proxy nicht verwenden. Technisch ist der Zugriff aus anderen R\u00e4umen jedoch trotzdem noch m\u00f6glich. Mit aktivieren dieser Option wird der Zugriff aus anderen R\u00e4umen per Firewall verhindert.",
     "lang_firewalled": "Zugriff auf zugewiesene R\u00e4ume beschr\u00e4nken",
+    "lang_flags": "Flags",
     "lang_global": "Global",
     "lang_lastSeen": "Letzte Aktivit\u00e4t",
+    "lang_latency": "Latenz",
     "lang_location": "Ort",
     "lang_locations": "Orte",
     "lang_manageAccessTo": "Zugriff auf Server festlegen:",
     "lang_managedServer": "Automatisch konfigurierter DNBD3-Proxy",
     "lang_managedServerAdd": "Automatisch konfigurierten Proxy hinzuf\u00fcgen",
     "lang_managedServerHelp": "Automatisch konfigurierte DNBD3-Proxies booten wie gew\u00f6hnliche bwLehrpool-Clients via PXE \u00fcber den Satelliten-Server. Sobald ein bwLehrpool-Client als DNBD3-Proxy konfiguriert wird, erh\u00e4lt er beim Booten eine gesonderte Konfiguration, sodass er fortan exklusiv als DNBD3-Proxy arbeitet, und nicht mehr als Arbeitsstation zur Verf\u00fcgung steht.\r\nDer Vorteil ist, dass die Konfiguration automatisiert erfolgt, und durch w\u00f6chentliche Reboots sichergestellt wird, dass eventuelle Updates des MiniLinux angewendet werden.\r\nIn diesem Fall legen Sie bitte eine Partition mit der ID 45 auf der Festplatte des Proxy-Servers an; diese wird persistent Behandelt und im Gegensatz zur ID44-Partition nicht beim Booten formatiert. Generell sollte diese Partition so gro\u00df wie m\u00f6glich sein, abh\u00e4ngig von der Anzahl der genutzten VMs. Bei Platzmangel l\u00f6scht der Proxy automatisch die VM, die am l\u00e4ngsten nicht verwendet wurde, um neuen VMs Platz zu machen.\r\nWeitere Informationen dazu finden Sie im Wiki.",
+    "lang_numFails": "Fehler",
+    "lang_proxyConfig": "Konfiguration",
     "lang_proxyLocationText": "Bla bla bla BLA!!!!",
     "lang_proxyServerTHead": "Server\/Proxy",
+    "lang_reboot": "Reboot",
+    "lang_rebootProxyHeading": "Proxy neustarten",
+    "lang_rebootProxyText": "Bei \u00c4nderungen an der Konfiguration muss der Server neugestartet werden, damit die \u00c4nderungen wirksam werden.",
     "lang_recursiveCount": "Rekursiv",
     "lang_rxTotal": "Gesamt empfangen",
     "lang_serverList": "Serverliste",
+    "lang_sessionRx": "Seit Neustart empfangen",
+    "lang_sessionTx": "Seit Neustart gesendet",
+    "lang_settings": "Einstellungen",
     "lang_storageSize": "Speichergr\u00f6\u00dfe",
     "lang_test": "Testen",
     "lang_txTotal": "Gesamt gesendet",
