--- a/modules-available/backup/lang/de/template-tags.json
+++ b/modules-available/backup/lang/de/template-tags.json
@@ -5,6 +5,7 @@
     "lang_browseForFile": "Durchsuchen",
     "lang_download": "Herunterladen",
     "lang_dozmodExplanation": "Die Datenbank des Dozentenmoduls wiederherstellen. Dazu geh\u00f6ren die Metadaten der Virtuellen Maschinen, die Veranstaltungen, etc. Bitte beachten Sie, dass hierzu auf dem konfigurierten VM-Store die passenden VM-Abbilder vorliegen m\u00fcssen, da diese extern gespeichert werden. Wenn sich der Servername oder die -adresse ge\u00e4ndert haben stellen Sie bitte sicher, dass die relativen Pfade innerhalb des Netzlaufwerks gleich geblieben sind. Ansonsten werden die wiederhergestellten VMs nicht verwendbar sein.",
+    "lang_lastBackup": "Letzte Sicherung",
     "lang_reboot": "Systemneustart",
     "lang_restore": "Hochladen",
     "lang_restoreConfig": "Konfiguration wiederherstellen",
@@ -15,5 +16,6 @@
     "lang_selectFile": "Bitte w\u00e4hlen Sie ein Backup-Archiv",
     "lang_stopping": "Stoppe",
     "lang_systemExplanation": "Die Grundkonfiguration des Satelliten wiederherstellen: Authentifizierungmethode, Passw\u00f6rter, Proxies, VM-Storage, etc.\r\nACHTUNG: Wenn Sie ein Backup von vor WS15\/16 einspielen (Backup-Format vor Version 10), wird die Systemkonfiguration in jedem Fall wiederhergestellt, auch wenn Sie diesen Haken nicht setzen.",
+    "lang_unknown": "Unbekannt",
     "lang_waitReboot": "Warte auf Reboot."
 }
