--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -8,6 +8,7 @@
     "lang_calendar": "Kalender",
     "lang_calupdateTooltip": "Zeit nachdem der Kalender aktualisiert wird (in Minuten)",
     "lang_checkConnection": "Verbindung pr\u00fcfen",
+    "lang_closed": "Geschlossen",
     "lang_closingTime": "Schlie\u00dfungszeit",
     "lang_config": "Einstellungen",
     "lang_configupdateTooltip": "Zeit nach der die Einstellungen aktualisiert werden (in Minuten)",
@@ -25,11 +26,15 @@
     "lang_ecoTooltip": "Anstelle der Farb-basierten PC-Status Bilder, werden Symbol-basierte PC Bilder verwendet",
     "lang_editDefaultPanelHints": "Hier k\u00f6nnen Sie ein Panel (z.B. digitales T\u00fcrschild) in Aussehen und Funktionsweise definieren. Um im Kalender \u00d6ffnungszeiten anzeigen zu k\u00f6nnen, m\u00fcssen Sie im Tab \"Raum-\/Ortsbezogene Einstellungen\" f\u00fcr den ausgew\u00e4hlten Raum entsprechend \u00d6ffnungszeiten eintragen. Damit im Kalender Veranstaltungen und andere Termine angezeigt werden k\u00f6nnen, muss ein funktionierendes Backend konfiguriert und den ausgew\u00e4hlten R\u00e4umen zugewiesen worden sein.",
     "lang_editPanel": "Panel bearbeiten",
+    "lang_editUrlPanelHints": "Hier k\u00f6nnen Sie konfigurieren, welche URL das Panel aufrufen soll. Dies erm\u00f6glicht Ihnen z.B. in Eingangsbereichen aktuelle Meldungen der Hochschule oder sonstige Webseiten anzuzeigen.",
     "lang_entryName": "Name",
     "lang_error": "Fehler",
     "lang_expertMode": "Expertenmodus",
     "lang_fourLocsHint": "Hier k\u00f6nnen Sie bis zu vier Orte ausw\u00e4hlen, die in diesem Panel angezeigt werden.",
+    "lang_free": "Frei",
     "lang_general": "Allgemein",
+    "lang_ignoreSslTooltip": "Akzeptiere ung\u00fcltige, abgelaufene oder selbstsignierte SSL-Zertifikate",
+    "lang_insecureSsl": "Unsicheres SSL",
     "lang_language": "Sprache",
     "lang_languageTooltip": "Legt die Sprache der angezeigten Oberfl\u00e4che fest",
     "lang_locationName": "Name",
@@ -37,6 +42,13 @@
     "lang_locations": "Orte",
     "lang_locationsTable": "R\u00e4ume \/ Orte",
     "lang_locationsTableHints": "Hier k\u00f6nnen Sie f\u00fcr die R\u00e4ume und Orte Ihrer Einrichtung \u00d6ffnungszeiten hinterlegen, sowie die Verkn\u00fcpfung mit Raum-IDs aus konfigurierten Backends (z.B. HISinOne) vornehmen, damit Belegungspl\u00e4ne abgerufen werden k\u00f6nnen.",
+    "lang_longFri": "Freitag",
+    "lang_longMon": "Montag",
+    "lang_longSat": "Samstag",
+    "lang_longSun": "Sonntag",
+    "lang_longThu": "Donnerstag",
+    "lang_longTue": "Dienstag",
+    "lang_longWed": "Mittwoch",
     "lang_mode": "Modus",
     "lang_mode1": "Kalender & Raum",
     "lang_mode2": "Kalender",
@@ -68,6 +80,7 @@
     "lang_rotation2": "180\u00b0",
     "lang_rotation3": "90\u00b0 \u27f3",
     "lang_rotationTooltip": "Rotiert den angezeigten Raum",
+    "lang_runmodeTHead": "Clients",
     "lang_saturday": "Samstag",
     "lang_scale": "Kalenderbreite",
     "lang_scaleTooltip": "[10-90] Legt die Kalenderbreite fest (in Prozent)",
@@ -77,36 +90,30 @@
     "lang_serverTableHints": "Liste aller definierten Backend-Server. Diese werden ben\u00f6tigt, um Belegungspl\u00e4ne f\u00fcr R\u00e4ume abzurufen.",
     "lang_serverTooltip": "Legt fest, von welchem Backend-Server die Kalenderdaten bezogen werden",
     "lang_serverType": "Typ",
+    "lang_shortFri": "Fr",
     "lang_shortFriday": "Fr",
+    "lang_shortMon": "Mo",
     "lang_shortMonday": "Mo",
+    "lang_shortSat": "Sa",
     "lang_shortSaturday": "Sa",
+    "lang_shortSun": "So",
     "lang_shortSunday": "So",
+    "lang_shortThu": "Do",
     "lang_shortThursday": "Do",
+    "lang_shortTue": "Di",
     "lang_shortTuesday": "Di",
+    "lang_shortWed": "Mi",
     "lang_shortWednesday": "Mi",
     "lang_summaryPanel": "\u00dcbersichts-Panel",
     "lang_sunday": "Sonntag",
     "lang_switchTime": "Wechselintervall",
     "lang_switchTimeTooltip": "[1-120] Legt die Zeit fest, die vergeht bis ein Wechsel erfolgt (in Sekunden)",
+    "lang_to": "bis",
     "lang_typeTooltip": "Legt fest um welchen Server-Typ es sich handelt",
     "lang_updateRates": "Aktualisierungsintervall",
+    "lang_url": "URL",
+    "lang_urlPanel": "URL-Panel",
+    "lang_urlTooltip": "URL die aufgerufen wird",
     "lang_vertical": "Vertikaler Modus",
-    "lang_verticalTooltip": "Legt fest, ob Kalender und Raum \u00fcbereinander angezeigt werden sollen",
-    "lang_closed": "Geschlossen",
-    "lang_free": "Frei",
-    "lang_shortSun": "So",
-    "lang_shortMon": "Mo",
-    "lang_shortTue": "Di",
-    "lang_shortWed": "Mi",
-    "lang_shortThu": "Do",
-    "lang_shortFri": "Fr",
-    "lang_shortSat": "Sa",
-    "lang_longSun": "Sonntag",
-    "lang_longMon": "Montag",
-    "lang_longTue": "Dienstag",
-    "lang_longWed": "Mittwoch",
-    "lang_longThu": "Donnerstag",
-    "lang_longFri": "Freitag",
-    "lang_longSat": "Samstag",
-    "lang_to": "bis"
+    "lang_verticalTooltip": "Legt fest, ob Kalender und Raum \u00fcbereinander angezeigt werden sollen"
 }
