--- a/modules-available/dnbd3/lang/en/messages.json
+++ b/modules-available/dnbd3/lang/en/messages.json
@@ -1,3 +1,11 @@
 {
+    "dnbd3-proxy-unreachable": "DNBD3-Proxy {{0}} is offline since {{2}}. ({{1}}) ",
+    "invalid-ipv4": "{{0}} is no valid IPv4-Address",
+    "main-dnbd3-unreachable": "Main DNBD3-Server of the satellite server is offline since {{1}}. ({{0}})",
+    "not-automatic-server": "{{0}} is not managed by this satellite server",
+    "server-added": "Server {{0}} added",
+    "server-already-exists": "Server {{0}} already exists",
+    "server-deleted": "Server {{0}} deleted",
+    "server-non-existent": "Server {{0}} doesn't exist",
     "server-unreachable": "Server not reachable"
 }
