--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -1,7 +1,5 @@
 {
-    "lang_defaultPanel": "Default panel",
     "lang_addServer": "Server",
-    "lang_summaryPanel": "Summary panel",
     "lang_areYouSure": "Are you sure?",
     "lang_autoScale": "Auto Days",
     "lang_autoscaleTooltip": "Calculates the optimum amount of days to show from the display width",
@@ -10,6 +8,7 @@
     "lang_calendar": "Calendar",
     "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
     "lang_checkConnection": "Check connection",
+    "lang_closed": "Closed",
     "lang_closingTime": "Closing time",
     "lang_config": "Config",
     "lang_configupdateTooltip": "Time interval the config gets updated (in minutes)",
@@ -18,24 +17,37 @@
     "lang_day": "Day",
     "lang_daysToShow": "Days",
     "lang_daysToShowTooltip": "Defines the amount of days to show in the calendar",
+    "lang_defaultPanel": "Default panel",
     "lang_deleteConfirmation": "Are you sure?",
     "lang_display": "Display",
     "lang_displayName": "Name",
     "lang_displayNameTooltip": "Display name for this panel",
     "lang_ecoMode": "E-Ink mode",
     "lang_ecoTooltip": "Symbolic based pc state pictures are used instead of the colour based ones",
+    "lang_editDefaultPanelHints": "Here you can define panel properties for e.g. a digital door sign. To show opening times for a room you need to define corresponding times in the settings.\r\nIf you want to show calendar events you have to define a functioning backend first and link it to corresponding rooms.",
     "lang_editPanel": "Edit panel",
+    "lang_editUrlPanelHints": "Here you can define which URL is opened by the panel. This enables you to show news about your university or any other website.",
     "lang_entryName": "Name",
     "lang_error": "Error",
     "lang_expertMode": "Expert mode",
     "lang_fourLocsHint": "You can pick up to four locations that will be shown in this panel.",
+    "lang_free": "Free",
     "lang_general": "General",
+    "lang_ignoreSslTooltip": "Accept invalid, expired or self-signed ssl certificates",
+    "lang_insecureSsl": "Insecure SSL",
     "lang_language": "Language",
     "lang_languageTooltip": "The language the frontend uses",
     "lang_locationName": "Name",
     "lang_locationSettings": "Settings",
     "lang_locations": "Locations",
     "lang_locationsTable": "Rooms \/ Locations",
+    "lang_longFri": "Friday",
+    "lang_longMon": "Monday",
+    "lang_longSat": "Saturday",
+    "lang_longSun": "Sunday",
+    "lang_longThu": "Thursday",
+    "lang_longTue": "Tuesday",
+    "lang_longWed": "Wednesday",
     "lang_mode": "Mode",
     "lang_mode1": "Calendar & Room",
     "lang_mode2": "Calendar",
@@ -66,6 +78,7 @@
     "lang_rotation2": "180\u00b0",
     "lang_rotation3": "90\u00b0 \u27f3",
     "lang_rotationTooltip": "Rotates the room",
+    "lang_runmodeTHead": "Clients",
     "lang_saturday": "Saturday",
     "lang_scale": "Calendar width",
     "lang_scaleTooltip": "[10-90] Defines the calendar width (in percent)",
@@ -74,35 +87,30 @@
     "lang_serverTable": "Manage backend servers",
     "lang_serverTooltip": "Defines from which server the room queries the calendar data",
     "lang_serverType": "Type",
+    "lang_shortFri": "Fri",
     "lang_shortFriday": "Fri",
+    "lang_shortMon": "Mon",
     "lang_shortMonday": "Mon",
+    "lang_shortSat": "Sat",
     "lang_shortSaturday": "Sat",
+    "lang_shortSun": "Sun",
     "lang_shortSunday": "Sun",
+    "lang_shortThu": "Thu",
     "lang_shortThursday": "Thu",
+    "lang_shortTue": "Tue",
     "lang_shortTuesday": "Tue",
+    "lang_shortWed": "Wed",
     "lang_shortWednesday": "Wed",
+    "lang_summaryPanel": "Summary panel",
     "lang_sunday": "Sunday",
     "lang_switchTime": "Switchtime",
     "lang_switchTimeTooltip": "[1-120] Sets the time between switching (in seconds)",
+    "lang_to": "to",
     "lang_typeTooltip": "Defines on which type of server you want to connect to",
     "lang_updateRates": "Update rates",
+    "lang_url": "URL",
+    "lang_urlPanel": "URL panel",
+    "lang_urlTooltip": "URL which is shown by the panel",
     "lang_vertical": "Vertical mode",
-    "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other",
-    "lang_closed": "Closed",
-    "lang_free": "Free",
-    "lang_shortSun": "Sun",
-    "lang_shortMon": "Mon",
-    "lang_shortTue": "Tue",
-    "lang_shortWed": "Wed",
-    "lang_shortThu": "Thu",
-    "lang_shortFri": "Fri",
-    "lang_shortSat": "Sat",
-    "lang_longSun": "Sunday",
-    "lang_longMon": "Monday",
-    "lang_longTue": "Tuesday",
-    "lang_longWed": "Wednesday",
-    "lang_longThu": "Thursday",
-    "lang_longFri": "Friday",
-    "lang_longSat": "Saturday",
-    "lang_to": "to"
+    "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other"
 }
