--- a/modules-available/main/lang/en/messages.json
+++ b/modules-available/main/lang/en/messages.json
@@ -6,7 +6,9 @@
     "invalid-action": "Invalid action '{{0}}'",
     "module-missing-deps": "Module {{0}} has missing dependencies",
     "no-permission": "No sufficient privileges to access this page",
-    "no-such-module": "Modul {{0}} existiert nicht",
+    "no-such-module": "Module {{0}} doesn't exist",
+    "parameter-empty": "Parameter {{0}} is empty",
+    "parameter-missing": "Parameter {{0}} is missing",
     "task-error": "Execution failed: {{0}}",
     "taskmanager-error": "Failed to connect to the Task Manager",
     "taskmanager-format": "Task Manager has returned invalid data",
